fix freeze token
