# api-docs/api/swagger/swagger.yaml
@@ -2464,6 +2464,45 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /tokens/push/{tokenId}/{username}/freeze:
+    put:
+      tags:
+        - tokens
+      description: Freezes transfers of the specified token for the user. Only users with the Standard Registry role are allowed to make the request.
+      security:
+        - bearerAuth: []
+      summary: Freeze transfers of the specified token for the user.
+      parameters:
+        - in: path
+          name: tokenId
+          schema:
+            type: string
+          required: true
+          description: Token ID.
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: Username.
+      responses:
+        200:
+          description: Successful operation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+        401:
+          description: Unauthorized.
+        403:
+          description: Forbidden.
+        500:
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /tokens/{tokenId}/{username}/unfreeze:
     put:
       tags:
@@ -2498,6 +2537,45 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+        401:
+          description: Unauthorized.
+        403:
+          description: Forbidden.
+        500:
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /tokens/push/{tokenId}/{username}/unfreeze:
+    put:
+      tags:
+        - tokens
+      description: Unfreezes transfers of the specified token for the user. Only users with the Standard Registry role are allowed to make the request.
+      security:
+        - bearerAuth: []
+      summary: Unfreezes transfers of the specified token for the user.
+      parameters:
+        - in: path
+          name: tokenId
+          schema:
+            type: string
+          required: true
+          description: Token ID.
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: Username.
+      responses:
+        200:
+          description: Successful operation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
         401:
           description: Unauthorized.
         403:
